k8s/chrome-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome-node
  labels:
    app: chrome-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chrome-node
  template:
    metadata:
      labels:
        app: chrome-node
    spec:
      containers:
        - name: chrome-node
          image: selenium/node-chrome:4.21.0
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "1Gi"
