k8s/firefox-node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox-node
  labels:
    app: firefox-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: firefox-node
  template:
    metadata:
      labels:
        app: firefox-node
    spec:
      containers:
        - name: firefox-node
          image: selenium/node-firefox:4.21.0
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "1Gi"
