k8s/test-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pytest-runner
  labels:
    app: pytest-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pytest-runner
  template:
    metadata:
      labels:
        app: pytest-runner
    spec:
      containers:
        - name: pytest-runner
          image: selenium-pytest-jenkins-test-runner:latest
          imagePullPolicy: IfNotPresent
          command: ["pytest"]
          args: ["Tests", "-v", "-n", "2", "--alluredir=allure-results"]
