k8s/selenium-hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub-service
spec:
  selector:
    app: selenium-hub
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 4444
  type: ClusterIP
