k8s/selenium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-hub-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: selenium-grid.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selenium-hub-service
                port:
                  number: 4444
